# zerodte

./: .dockerignore  .gitignore  Makefile  README.md  pcconfig.py  pyproject.toml
analysis/: README.md  dwh_byob_details.malloy  dwh_byob_summary.malloy  dwh_tat.malloy  reporting_byob_summary.malloy  reporting_byob_tat.malloy  reporting_tat.malloy
analysis/styles/: reporting_byob_summary.styles.json
lib/: contabo_utils.py  duckdb_utils.py
services/byob_scraper/: README.md  pyproject.toml  scrapy.cfg
services/byob_scraper/byob_requests/: main.py  settings.py  utils.py
services/byob_scraper/src/: config.py  requests_entries.py  trades_spider.py  utils.py
