[tool.poetry]
name = "zerodte"
version = "0.1.0"
description = ""
authors = ["JeremyLG <jeremy.le-gall@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynecone = "^0.1.32"
paramiko = "^3.2.0"
duckdb = "^0.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
