[tool.poetry]
name = "byob_scraper"
version = "0.1.0"
description = ""
authors = ["JeremyLG <jeremy.le-gall@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Scrapy = "^2.8.0"
pandas = "^2.0.0"
fake-useragent = "^1.1.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
